@@ -13,6 +13,7 @@
    - ***** END LICENSE BLOCK *****
 -->
 
+<?xml-stylesheet href="chrome://status4evar/skin/australis.css" type="text/css" ?>
 <?xml-stylesheet href="chrome://status4evar-os/skin/australis.css" type="text/css" ?>
 
 <overlay id="status4evar-australis-overlay"
