@@ -13,3 +13,5 @@ nv_timeout=Timed Out
 # Should be the same as status4evar.status.widget.title
 statusText=Status Text
 
+legacyWidgetTitle=Legacy Status Bar
+
