@@ -1,0 +1,50 @@
+/*
+ * ***** BEGIN LICENSE BLOCK *****
+ * 
+ * This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ * 
+ * Copyright (C) 2014 Matthew Turnbull <sparky@bluefang-logic.com>. All Rights Reserved.
+ * 
+ * ***** END LICENSE BLOCK *****
+ * 
+ * Original Add-on bar styling by Mozilla Foundation.
+ * Adapted from the back-out patch:
+ * https://hg.mozilla.org/mozilla-central/rev/dd59f8effb73
+*/
+
+@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
+
+#status-bar
+{
+	display: -moz-box;
+	min-width: 0;
+	min-height: 0;
+	-moz-appearance: none;
+	background-color: transparent;
+	border: none;
+}
+
+#status-bar > statusbarpanel
+{
+	border-width: 0;
+	-moz-appearance: none;
+}
+
+#status4evar-legacy-widget[cui-areatype="menu-panel"] #status-bar,
+toolbarpaletteitem[place="palette"] > #status4evar-legacy-widget #status-bar
+{
+	min-height: 32px;
+}
+
+toolbarpaletteitem #status-bar
+{
+	min-width: 32px;
+	background-image: repeating-linear-gradient(135deg,
+	                  rgba(255,255,255,0.1),
+	                  rgba(255,255,255,0.1) 5px,
+	                  rgba(0,0,0,0.1) 5px,
+	                  rgba(0,0,0,0.1) 10px);
+}
+
