@@ -23,6 +23,26 @@
 	min-height: 20px;
 }
 
+#status4evar-status-bar .toolbarbutton-1,
+#status4evar-status-bar .toolbarbutton-1 > .toolbarbutton-menubutton-button
+{
+	-moz-appearance: none;
+	border-style: none;
+	padding: 0 3px;
+}
+
+#status4evar-status-bar .toolbarbutton-1:not([disabled]):hover,
+#status4evar-status-bar .toolbarbutton-1[open],
+#status4evar-status-bar .toolbarbutton-1 > .toolbarbutton-menubutton-button:not([disabled]):hover
+{
+	background-image: linear-gradient(to top, transparent, rgba(0,0,0,.15)),
+	                  linear-gradient(to top, transparent, rgba(0,0,0,.15) 30%),
+	                  linear-gradient(to top, transparent, rgba(0,0,0,.15) 30%);
+	background-position: left, left, right;
+	background-size: auto, 1px 100%, 1px 100%;
+	background-repeat: no-repeat;
+}
+
 #status4evar-download-button #status4evar-download-icon
 {
 	background: -moz-image-rect(url("chrome://browser/skin/Toolbar.png"), 0, 198, 18, 180) center no-repeat;
