@@ -1,5 +1,7 @@
 Version next
 * Fix download button icon styles (Australis)
+* Fix Windows and Linux status bar styles. OS X Still needs work. (Australis)
+* Support legacy status bar panel (Australis)
 
 Version 2014.04.27.21
 * Fix toolbars overlapping download finished animation.
